Update Week 3 Part_2 and 3.ipynb

--- a/Week 3 Part_2 and 3.ipynb
+++ b/Week 3 Part_2 and 3.ipynb
@@ -781,8 +781,8 @@
     }
    ],
    "source": [
-    "CLIENT_ID = 'MMXRWWDSXOIM5H5J13OA20ATET3MPUD5DZBMUOEUPL0ETZOC' # Foursquare ID - Hidden due to security reasons\n",
-    "CLIENT_SECRET = '3PPMEGIYZKO2HKZX0EUI3RB3SL4KJCL4TXGME20HO54JFJCX' # Foursquare Secret - Hidden due to security reasons\n",
+    "CLIENT_ID = '********' # Foursquare ID - Hidden due to security reasons\n",
+    "CLIENT_SECRET = '********' # Foursquare Secret - Hidden due to security reasons\n",
     "VERSION = '20180605' # Foursquare API version\n",
     "\n",
     "print('Your credentails:')\n",
